fixed overflowing table content in solution input mask

--- a/repair/static/css/strategy.css
+++ b/repair/static/css/strategy.css
@@ -35,6 +35,11 @@
 .part-table{
     table-layout: fixed;
     max-width: 100%;
+    width: 100%;
+}
+
+.part-table .btn-group, .part-table select{
+    max-width: 100%;
 }
 
 .part-table th{
